fix(paper): disable tap highlights on iOS

--- a/packages/varlet-ui/src/paper/paper.less
+++ b/packages/varlet-ui/src/paper/paper.less
@@ -8,6 +8,7 @@
   transition: background-color 0.25s;
   overflow: hidden;
   border-radius: var(--paper-border-radius);
+  -webkit-tap-highlight-color: transparent;
 
   &--round {
     border-radius: 50%;
